--- a/Desktop/Leveling_Script.ipynb
+++ b/Desktop/Leveling_Script.ipynb
@@ -13,15 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv('FY19.csv', encoding = 'unicode_escape')\n",
-    "\n",
+    "df = pd.read_csv('FY19.csv', encoding = 'unicode_escape')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Insertion of Level Columns\n",
     "df['Level_1'] = np.nan\n",
     "df['Level_2'] = np.nan\n",
     "df['Level_3'] = np.nan"
@@ -29,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,22 +64,64 @@
     "#Cleaning: Remove 'Johns Hopkins Com. Physicians' with 'Johns Hopkins Communtiy Physicians'\n",
     "df['Division'] = df['Division'].replace('Johns Hopkins Com. Physicians', 'Johns Hopkins Community Physicians')\n",
     "\n",
-    "#Cleaning: Remove 'NA' with 'General'\n",
-    "df['Division'] = df['Division'].replace('Blank', 'General')"
+    "#Cleaning: Remove 'Bloomberg School of Public Health' with 'School of Public Health'\n",
+    "df['Division'] = df['Division'].replace('Bloomberg School of Public Health', 'School of Public Health')\n",
+    "\n",
+    "#Cleaning: Remove 'Nitze School of Advanced International Studies' with 'SAIS'\n",
+    "df['Division'] = df['Division'].replace('Nitze School of Advanced International Studies', 'SAIS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "#Leveling: FASAP BMC\n",
-    "df.index[(df.Division == 'Johns Hopkins Bayview Med Ctr')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Bayview Med Ctr')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Bayview Med Ctr')], 'Level_2'] = 'BMC'"
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Bayview Med Ctr')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Bayview Med Ctr')], 'Level_2'] = 'BMC'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: FASAP JHHS JHCP\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Community Physicians')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Community Physicians')], 'Level_2'] = 'JHHS'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Community Physicians')], 'Level_3'] = 'JHCP'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: FASAP JHHS JHHC\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Health Care')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Health Care')], 'Level_2'] = 'JHHS'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Health Care')], 'Level_3'] = 'JHHC'"
    ]
   },
   {
@@ -80,11 +130,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Leveling: FASAP JHHS JHCP\n",
-    "df.index[(df.Division == 'Johns Hopkins Community Physicians')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Community Physicians')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Community Physicians')], 'Level_2'] = 'JHHS'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Community Physicians')], 'Level_3'] = 'JHCP'"
+    "#Leveling: FASAP JHHS JHHS\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Health System')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Health System')], 'Level_2'] = 'JHHS'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Health System')], 'Level_3'] = 'JHHS'"
    ]
   },
   {
@@ -93,11 +148,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Leveling: FASAP JHHS JHHC\n",
-    "df.index[(df.Division == 'Johns Hopkins Health Care')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Health Care')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Health Care')], 'Level_2'] = 'JHHS'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Health Care')], 'Level_3'] = 'JHHC'"
+    "#Leveling: FASAP JHHS JHHCG:\n",
+    "\n",
+    "#Johns Hopkins Home Care Group\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Home Care Group')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Home Care Group')], 'Level_2'] = 'JHHS'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Home Care Group')], 'Level_3'] = 'JHHCG'\n",
+    "\n",
+    "#Johns Hopkins Home Health Svcs\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_2'] = 'JHHS'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_3'] = 'JHHCG'\n",
+    "\n",
+    "#Johns Hopkins Peds at Home\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Ped at Home')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Ped at Home')], 'Level_2'] = 'JHHS'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Ped at Home')], 'Level_3'] = 'JHHCG'\n",
+    "\n",
+    "#Johns Hopkins Pharmaquip\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Pharmaquip')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Pharmaquip')], 'Level_2'] = 'JHHS'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Pharmaquip')], 'Level_3'] = 'JHHCG'"
    ]
   },
   {
@@ -106,11 +201,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Leveling: FASAP JHHS JHHS\n",
-    "df.index[(df.Division == 'Johns Hopkins Health System')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Health System')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Health System')], 'Level_2'] = 'JHHS'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Health System')], 'Level_3'] = 'JHHS'"
+    "#Leveling: FASAP JHHS JHH\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Hospital')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Hospital')], 'Level_2'] = 'JHHS'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'Johns Hopkins Hospital')], 'Level_3'] = 'JHH'"
    ]
   },
   {
@@ -119,31 +219,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Leveling: FASAP JHHS JHHCG:\n",
-    "\n",
-    "#Johns Hopkins Home Care Group\n",
-    "df.index[(df.Division == 'Johns Hopkins Home Care Group')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Care Group')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Care Group')], 'Level_2'] = 'JHHS'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Care Group')], 'Level_3'] = 'JHHCG'\n",
-    "\n",
-    "#Johns Hopkins Home Health Svcs\n",
-    "df.index[(df.Division == 'Johns Hopkins Home Health Svcs')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_2'] = 'JHHS'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_3'] = 'JHHCG'\n",
-    "\n",
-    "#Johns Hopkins Home Health Svcs\n",
-    "df.index[(df.Division == 'Johns Hopkins Home Health Svcs')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_2'] = 'JHHS'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Home Health Svcs')], 'Level_3'] = 'JHHCG'\n",
-    "\n",
-    "#Johns Hopkins Pharmaquip\n",
-    "df.index[(df.Division == 'Johns Hopkins Pharmaquip')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Pharmaquip')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Pharmaquip')], 'Level_2'] = 'JHHS'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Pharmaquip')], 'Level_3'] = 'JHHCG'"
+    "#Leveling: FASAP JHU Faculty\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Faculty')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Faculty')], 'Level_2'] = 'JHU'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Faculty')], 'Level_3'] = 'Faculty'"
    ]
   },
   {
@@ -152,16 +234,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Leveling: FASAP JHHS JHH\n",
-    "df.index[(df.Division == 'Johns Hopkins Hospital')]\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Hospital')], 'Level_1'] = 'FASAP'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Hospital')], 'Level_2'] = 'JHHS'\n",
-    "df.at[df.index[(df.Division == 'Johns Hopkins Hospital')], 'Level_3'] = 'JHH'"
+    "#Leveling: FASAP JHU Staff\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Staff')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Staff')], 'Level_2'] = 'JHU'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Staff')], 'Level_3'] = 'Staff'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP BSPH\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Public Health')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') &\n",
+    "               (df.Division == 'School of Public Health')], 'Level_2'] = 'BSPH'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP CBS\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Carey Business School')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') &\n",
+    "               (df.Division == 'Carey Business School')], 'Level_2'] = 'CBS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP EP - FILL IN LATER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP SAIS\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'SAIS')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') &\n",
+    "               (df.Division == 'SAIS')], 'Level_2'] = 'SAIS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP SOE\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Education')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') &\n",
+    "               (df.Division == 'School of Education')], 'Level_2'] = 'SOE'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP SOM\n",
+    "\n",
+    "#Medical student\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'Medical student')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'Medical student')], 'Level_2'] = 'SOM'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'Medical student')], 'Level_3'] = 'Medical Student'\n",
+    "\n",
+    "#Graduate student\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'Graduate student')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'Graduate student')], 'Level_2'] = 'SOM'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'Graduate student')], 'Level_3'] = 'Graduate Student'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP SON\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Nursing')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') &\n",
+    "               (df.Division == 'School of Nursing')], 'Level_2'] = 'SON'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP General\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') & \n",
+    "               (df.Division == 'JHSAP General')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Division == 'JHSAP General')], 'Level_2'] = 'General'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Division == 'JHSAP General')], 'Level_3'] = ' '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,17 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Leveling: FASAP JHHS General\n",
-    "#df.index[(df.Institution == 'Johns Hopkins Medical Institutions') | (df.Division == 'General')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
