--- a/Desktop/Leveling_Script.ipynb
+++ b/Desktop/Leveling_Script.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\cbroker1\\\\Desktop\\\\work\\\\Desktop'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "cwd = os.getcwd()\n",
@@ -20,7 +31,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv('FY19.csv', encoding = 'unicode_escape')"
+    "df = pd.read_csv('data.csv', encoding = 'unicode_escape')"
    ]
   },
   {
@@ -245,6 +256,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: FASAP JHU General"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: FASAP JHHS General"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -386,7 +415,7 @@
    "outputs": [],
    "source": [
     "#Save df to csv\n",
-    "df.to_csv('C:\\\\Users\\\\cbroker1\\\\Desktop\\\\work\\\\Desktop\\\\data.csv')"
+    "df.to_csv('C:\\\\Users\\\\cbroker1\\\\Desktop\\\\work\\\\Desktop\\\\data_leveled.csv')"
    ]
   },
   {
