--- a/Desktop/Leveling_Script.ipynb
+++ b/Desktop/Leveling_Script.ipynb
@@ -54,15 +54,8 @@
    "source": [
     "#Remove \"The\" from Institution Column\n",
     "df['Institution'] = df['Institution'].replace('The Johns Hopkins Medical Institutions','Johns Hopkins Medical Institutions')\n",
-    "df['Institution'] = df['Institution'].replace('The Johns Hopkins University','Johns Hopkins University')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df['Institution'] = df['Institution'].replace('The Johns Hopkins University','Johns Hopkins University')\n",
+    "\n",
     "#Cleaning: Remove 'Family of Faculty' and replace with 'Faculty'\n",
     "df['Affiliation'] = df['Affiliation'].replace('Family of Faculty', 'Faculty')\n",
     "\n",
@@ -79,12 +72,19 @@
     "df['Division'] = df['Division'].replace('Bloomberg School of Public Health', 'School of Public Health')\n",
     "\n",
     "#Cleaning: Remove 'Nitze School of Advanced International Studies' with 'SAIS'\n",
-    "df['Division'] = df['Division'].replace('Nitze School of Advanced International Studies', 'SAIS')"
+    "df['Division'] = df['Division'].replace('Nitze School of Advanced International Studies', 'SAIS')\n",
+    "\n",
+    "#Cleaning: Remove 'JHU Research & Clinical Fellow' with 'JHU Research Fellow'\n",
+    "df['Title'] = df['Title'].replace('JHU Research & Clinical Fellow', 'JHU Research Fellow')\n",
+    "\n",
+    "#Cleaning: Remove 'JHU Research & Clinical Fellow' with 'JHU Research Fellow'\n",
+    "df['Title'] = df['Title'].replace(['Fellow/JHH Intern','Fellow/Bayview Assistant Resident','Fellow/JHH Assistant Resident'], 'SOM Housestaff')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: FASAP JHU SOM_Postdoc\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'JHU Research Fellow')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'JHU Research Fellow')], 'Level_2'] = 'JHU'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'JHU Research Fellow')], 'Level_3'] = 'SOM Postdoc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: FASAP JHU SOM Housestaff\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'SOM Housestaff')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'SOM Housestaff')], 'Level_2'] = 'JHU'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Staff') & \n",
+    "               (df.Division == 'School of Medicine') &\n",
+    "               (df.Title == 'SOM Housestaff')], 'Level_3'] = 'SOM Housestaff'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,16 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Leveling: JHSAP EP - FILL IN LATER"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP AAP\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Advanced Academic Programs - AS')], 'Level_1'] = 'JHSAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') &\n",
+    "               (df.Division == 'Advanced Academic Programs - AS')], 'Level_2'] = 'AAP'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Leveling: JHSAP EP - FILL IN LATER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
