--- a/Desktop/Leveling_Script.ipynb
+++ b/Desktop/Leveling_Script.ipynb
@@ -2,36 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "import datetime as dt\n",
     "#open csv file\n",
-    "df = pd.read_csv('data.csv', encoding = 'unicode_escape')"
+    "df = pd.read_csv('data.csv', encoding = 'unicode_escape')\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Insertion of Blank Columns\n",
-    "df['Level_1'] = np.nan\n",
-    "df['Level_2'] = np.nan\n",
-    "df['Level_3'] = np.nan"
+    "#Cleaning: Remove 0 from Duration Columnand replace with '0:00'\n",
+    "df['Duration'] = df['Duration'].replace('0','0:00')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Phase 1 Cleaning \n",
+    "\n",
+    "#Cleaning: Convert Duration Column into datetime format\n",
+    "df['Duration'] =  pd.to_datetime(df['Duration'], format='%H:%M').dt.time\n",
+    "#df['Duration'] = df['Duration'].apply(lambda x:dt.datetime.strptime(x,'%H:%M')).dt.time\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Phase 1 Cleaning: \n",
+    "\n",
+    "#Cleaning: Remove 0 from Duration Columnand replace with '0:00'\n",
+    "df['Duration'] = df['Duration'].replace('0','0:00')\n",
+    "\n",
+    "#Cleaning: Convert Duration Column into datetime format\n",
+    "df['Duration'] =  pd.to_datetime(df['Duration'], format='%d%b%Y:%H:%M:%S.%f')\n",
+    "#df['Duration'] = df['Duration'].apply(lambda x:dt.datetime.strptime(x,'%H:%M'))\n",
     "\n",
     "#Cleaning: Remove \"The\" from Institution Column\n",
     "df['Institution'] = df['Institution'].replace('The Johns Hopkins Medical Institutions','Johns Hopkins Medical Institutions')\n",
@@ -58,22 +86,48 @@
     "#Cleaning: Remove 'Nitze School of Advanced International Studies' with 'SAIS'\n",
     "df['Division'] = df['Division'].replace('Nitze School of Advanced International Studies', 'SAIS')\n",
     "\n",
-    "#Cleaning: Remove 'JHU Research & Clinical Fellow' with 'JHU Research Fellow'\n",
-    "df['Title'] = df['Title'].replace('JHU Research & Clinical Fellow', 'JHU Research Fellow')\n",
+    "#Cleaning: Remove 'School of Arts and Sciences' with 'Krieger School of Arts and Sciences'\n",
+    "df['Division'] = df['Division'].replace('School of Arts & Sciences', 'Krieger School of Arts and Sciences')\n",
     "\n",
-    "#Cleaning: Remove 'JHU Research & Clinical Fellow' with 'JHU Research Fellow'\n",
+    "#Cleaning: Remove 'JHU Research & Clinical Fellow', 'etc' with 'Postdoc'\n",
+    "df['Title'] = df['Title'].replace(['JHU Clinical Fellow',\n",
+    "                                   'JHU Research & Clinical Fellow',\n",
+    "                                   'POST DOC FELLOW',\n",
+    "                                   'POST DOCTORAL FELLOW',\n",
+    "                                   'POSTDOC FELLOW',\n",
+    "                                   'Postdoctoral Fellow',\n",
+    "                                   'POSTDOCTORAL FELLOW',\n",
+    "                                   'Postdoctoral Fellow',\n",
+    "                                   'POSTDOCTORAL FELLOW',\n",
+    "                                   'PostDoc',\n",
+    "                                   'JHU Research Fellow'],\n",
+    "                                   'Postdoc')\n",
+    "\n",
+    "#Cleaning: Remove 'Resident/Intern Terms' with 'SOM Housestaff'\n",
     "df['Title'] = df['Title'].replace(['Fellow/JHH Intern','Fellow/Bayview Assistant Resident','Fellow/JHH Assistant Resident'], 'SOM Housestaff')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Insertion of Blank Columns\n",
+    "df['Level_1'] = np.nan\n",
+    "df['Level_2'] = np.nan\n",
+    "df['Level_3'] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "#Phase 2 Leveling\n",
+    "#Phase 2 Variable Assignment of Blank Columns('Level_1','Level_2','Level_3')\n",
     "\n",
     "#Leveling: FASAP BMC\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins Medical Institutions') &\n",
@@ -191,15 +245,57 @@
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'JHU Research Fellow')], 'Level_1'] = 'FASAP'\n",
+    "               (df.Title == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'JHU Research Fellow')], 'Level_2'] = 'JHU'\n",
+    "               (df.Title == 'Postdoc')], 'Level_2'] = 'JHU'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'JHU Research Fellow')], 'Level_3'] = 'SOM Postdoc'\n",
+    "               (df.Title == 'Postdoc')], 'Level_3'] = 'SOM Postdoc'\n",
+    "\n",
+    "#Leveling: FASAP JHU Library Postdoc\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Libraries') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Libraries') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_2'] = 'JHU'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Libraries') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_3'] = 'Libaries Postdoc'\n",
+    "\n",
+    "#Leveling: FASAP JHU KSAS Postdoc\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Krieger School of Arts and Sciences') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Krieger School of Arts and Sciences') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_2'] = 'JHU'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Krieger School of Arts and Sciences') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_3'] = 'KSAS Postdoc'\n",
+    "\n",
+    "#Leveling: FASAP JHU WSOE Postdoc\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Whiting School of Engineering') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Whiting School of Engineering') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_2'] = 'JHU'\n",
+    "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
+    "               (df.Affiliation == 'Student') & \n",
+    "               (df.Division == 'Whiting School of Engineering') &\n",
+    "               (df.Title == 'Postdoc')], 'Level_3'] = 'WSOE Postdoc'\n",
     "\n",
     "#Leveling: FASAP JHU SOM Housestaff\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
@@ -333,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
